# hutton-book-exercises

./: .gitignore  README.md  hutton-book-exercises.cabal
src/: DefiningFunctions.hs  Hof.hs  ListComps.hs  Recursion.hs
