name:                hutton-book-exercises
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stettix/hutton-book-exercises#readme
license:             BSD3
license-file:        LICENSE
author:              Jan Stette
maintainer:          
copyright:           2019 Jan Stette
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hutton-book-exercises
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
